set up eventbus and scss set up

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Webpack Project</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <my-navbar id="_navbar"></my-navbar>
+    <my-component></my-component>
   </body>
 </html>
