Routing, views and component working

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webpack Project</title>
   </head>
-  <body>
-    <my-navbar id="_navbar"></my-navbar>
-    <my-component></my-component>
+  <body id="root">
   </body>
 </html>
